--- a/Assignment2/Assignment2/Assignment2/Web.config
+++ b/Assignment2/Assignment2/Assignment2/Web.config
@@ -6,7 +6,11 @@
   -->
 
 <configuration>
-
+  <connectionStrings>
+    <add name="Assignment2" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
     <system.web>
       <compilation debug="true" targetFramework="4.6.1"/>
       <httpRuntime targetFramework="4.6.1"/>
